# Snake_tetris_game

./: README.md
src/: Doxyfile  Makefile  tetris.cpp  tetris.h
src/brick_game/snake/: CMakeLists.txt  snake_controller.cpp  snake_controller.h  snake_model.cpp  snake_model.h
src/brick_game/tetris/: backend.c  backend.h  common.c  common.h
src/gui/cli/: frontend.cpp  frontend.h
src/gui/desktop/: gamewidget.cpp  gamewidget.h  gamewindow.cpp  gamewindow.h  mainwindow.cpp  mainwindow.h  snakegame.cpp  snakegame.h  statuswidget.cpp  statuswidget.h  tetrisgame.cpp  tetrisgame.h  view.cpp  view.h
src/test/: test.c  test.cpp  test_class.cpp  test_class.h
